fix responsiveness, remove spacing for now

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
